Fix select box too big

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -88,6 +88,11 @@ a:visited {
     color: inherit;
 }
 
+select {
+    overflow: hidden;
+    width: 100%;
+}
+
 #app {
     align-items: stretch;
     justify-content: flex-start;
